--- a/pages/contact_ok.html
+++ b/pages/contact_ok.html
@@ -55,7 +55,7 @@
 				yahoo.ro</a></p>
                 </br>
 
-                <h3>Formular de contact</h3>
+                <!--<h3>Formular de contact</h3>-->
 
 			<!--<form class="form-horizontal" method="post" action="contact.php">
                 <div class="form-group">
@@ -88,16 +88,18 @@
                     </div>
                 </div>
             </form>-->
-
+                    <div class="alert alert-success">
+                        <strong>Am primit mesajul dvs!</strong> Va multumim.
+                    </div>
                     <form role="form" action="form-handler-nodb.php" method="POST">
                         <div class="row">
                             <div class="form-group col-lg-4">
                                 <label>Nume</label>
-                                <input type="text" name="name" class="form-control"  minlength="2" required>
+                                <input type="text" name="name" class="form-control" minlength="2" required>
                             </div>
                             <div class="form-group col-lg-4">
                                 <label>Email</label>
-                                <input type="email" name="email" class="form-control"  required>
+                                <input type="email" name="email" class="form-control" required>
                             </div>
                             <div class="form-group col-lg-4">
                                 <label>Telefon</label>
