--- a/pages/_head.html
+++ b/pages/_head.html
@@ -9,16 +9,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" rel="home" title="Mobila LUTSCH" href="index.html">
-                    <img src="../dist/img/logo/logo-ML-silver-485x85.png" style="max-width: 200px; margin-top: -5px;">
+                <a class="navbar-brand" rel="home" title="Denta Bran" href="index.html">
+                    <img src="../dist/img/logo/banner-denta-bran.jpg" style="max-width: 200px; margin-top: -5px;">
                 </a>
             </div>
             <!-- /.navbar-header -->
             <!-- navbar-top-links upper menu right -->
             <ul class="nav navbar-top-links navbar-right">
-                <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
-                <li><a href="despre-noi.html"><i class="fa fa-users"></i> Despre noi</a></li>
-                <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
+                <li><a href="index.html"><img src="../dist/img/logo/lang-rom-36x24.jpg" style="max-width: 36px; margin-top: -5px;"></a></li>
+                <li><a href="despre-noi.html"><img src="../dist/img/logo/lang-eng-36x24.jpg" style="max-width: 36px; margin-top: -5px;"></a></li>
+                <li><a href="despre-noi.html"><img src="../dist/img/logo/lang-ita-36x24.jpg" style="max-width: 36px; margin-top: -5px;"></a></li>                
             </ul>
             <!-- /.navbar-top-links -->
 
@@ -37,54 +37,11 @@
                             </div>                            
                         </li>-->
 
-                        <li><a href="dormitoare-lutsch.html">Dormitoare</a></li>                       
-                        <li><a href="sufragerie-lutsch.html">Sufragerii</a></li>
-                        <li><a href="mobila-tineret.html">Mobila tineret</a></li>
-                        <li><a href="coltare-lutsch.html">Coltare</a></li>
-                        <li><a href="#">Canapele<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a href="canapele-stofa.htm">Canapele din stofa</a></li>
-                                <li><a href="fotolii.html">Fotolii</a></li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
-                        <li><a href="#">Holuri<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a href="holuri-piele.html">Holuri din piele</a></li>
-                                <li><a href="holuri-lutsch.html">Holuri din stofa</a></li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
-                        <li><a href="garderoba-lutsch.html">Garderobe</a></li>
-                        <li><a href="dulap-lutsch.html">Dulapuri</a></li>
-                        <li><a href="bucatarii-lutsch.html">Bucatarii</a></li>
-                        <li><a href="paturi-lutsch.html">Paturi</a></li>
-                        <li><a href="saltele-lutsch.html">Saltele</a></li>
-                        <li><a href="mese-masaj-lutsch.html">Mese de masaj</a></li>
-                        <li><a href="#">Baie<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a href="mobilier-baie.html">Mobilier Baie</a></li>
-                                <li><a href="cabine-dus.html">Cabine Dus</a></li>
-                                <li><a href="cade-jacuzzi.html">Cade si Jacuzzi</a></li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
-                        <li><a href="#">Mic mobilier<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li><a href="scaune.html">Scaune</a></li>
-                                <li><a href="mese-lemn.html">Mese din lemn</a></li>
-                                <li><a href="masute-TV.html">Masute TV</a></li>
-                                <li><a href="birouri.html">Birouri</a></li>
-                                <li><a href="pantofare.html">Pantofare</a></li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
-                        <li><a href="usi-interior.html">Usi de interior</a></li>                       
-                        <li><a href="garaje-lutsch.html">Garaje</a></li>
-                        <li><a href="porti-garaj-lutsch.html">Porti de garaj</a></li>
-                        <li><a href="mobilier-gradina.html">Mobilier de gradina</a></li>
-                        <li><a href="termopane-lutsch.html">Termopane</a></li>                                                                     
-                        <li><a href="oferte-speciale.html">Oferte speciale</a></li>
+                        <li><a href="index.html">Home</a></li>                       
+                        <li><a href="servicii.html">Servicii</a></li>
+                        <li><a href="mobila-tineret.html">Echipa medicala</a></li>
+                        <li><a href="coltare-lutsch.html">Proiecte finantate</a></li>
+                        <li><a href="contact.php?mes=Formular de Contact&alert=info">Contact</a></li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
