--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Mobila LUTSCH - magazin de mobila Sebes - Alba</title>
+    <title>Denta Bran - implantologie, protetica, stomatologie, chirurgie oro-maxilo-faciala</title>
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- MetisMenu CSS -->
@@ -37,121 +37,162 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <!--<h1 class="page-header">Preturi competitive!</h1>-->
+                    <h2 class="page-header">Denta Bran - implantologie, protetica, stomatologie, chirurgie oro-maxilo-faciala</h2>
+                    <h3>Sunteti bineveniti la clinica stomatologica Denta Bran!</h2>
+                    <p>Va oferim cea mai buna solutie pentru problemele dvs. stomatologice: tratamente dentare de inalta calitate,
+                        in timpul unei vacante speciale in Alba Iulia.<br>
+                        Clinica stomatologica Denta Bran Dental din Alba Iulia, dotata cu cea mai moderna aparatura si tehnica stomatologica
+                        va ofera servicii stomatologice de cea mai inalta calitate. In paralel cu tratamentul stomatologic puteti petrece
+                        cateva zile de vacanta in atmosfera istorica a orasului nostru, cu diverse posibilitati de relaxare si divertisment.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-9">
-                        <h2>Cel mai mare si mai diversificat magazin de mobila din Sebes</h2>
-                        <p>de peste 10 ani in activitati de comert en-gros si en-detail de mobila.</p>
-                        <p>Expozitia noastra de mobila se desfasoara pe:</p>
-                        <ul>
-                            <li>1.500 m<sup>2</sup> - spatiu de expunere</li>
-                            <li>1.500 m<sup>2</sup> - spatiu de depozitare</li>
-                        </ul>
-                        <div id="myCarouse2" class="carousel slide" data-ride="carousel">
-                            <!-- Indicators -->
-                            <ol class="carousel-indicators">
-                                <li data-target="#myCarouse2" data-slide-to="0" class="active"></li>
-                                <li data-target="#myCarouse2" data-slide-to="1"></li>
-                                <li data-target="#myCarouse2" data-slide-to="2"></li>
-                                <li data-target="#myCarouse2" data-slide-to="3"></li>
-                            </ol>
-
-                            <!-- Wrapper for slides -->
-                            <div class="carousel-inner">
-                            <div class="item active">
-                                <!--<img src="../dist/img/carousel/carousel1.jpg" alt="imaginea 1" style="width:100%;">-->
-                                <img src="https://7tdabq.bn1302.livefilestore.com/y2pJ71hN9swfw2EmcIFOvX3GX9dnfp5oKnXfnzDC5gLMbHHlfW01RkTPfUayQihDAL7Gqv4mpupHLNsq5BADTBigXbX8sKdYPcudgp9N9DOMfE/biblioteca_leo_1010x460.jpg" alt="imaginea 1" style="width:100%;">
-                            </div>
-                            <div class="item">
-                                <img src="https://7tdabq.bn1302.livefilestore.com/y2pReoukYXOiqTDLzujdRCiqNZcbrhfrFGqYCnKlK7v4OS9y5XONkndfgaPrcg37fdaXHNeQ7VWwLqHJwYhhbxWOXtVKJS9swuU0cBj_rzaRN4/holuri_1010x460.jpg" alt="imaginea 2" style="width:100%;">
-                            </div>
-                            <div class="item">
-                                <img src="https://7tdabq.bn1301.livefilestore.com/y2psW9SgoyR742CzWQFX2SqAcGd73f6T84rr7a8cBII02DfH-8mMjwujNr_i2O7BR-S4SdnwdyHzCFt8itjz_SgR7iQSCmUJHtJmrf90ASHLaM/mobilier_kari_1010x460.jpg" alt="imaginea 3" style="width:100%;">
-                            </div>                         
-                            <div class="item">
-                                <img src="https://7tdabq.bn1302.livefilestore.com/y2p4489Q-hccsHyM0EJ8Y7oqAKzTNhUG5BWStxuiAvHnQ2fyoB5hfJ2tR5R_rE28Nj2SNmIzzavp_0licJ0hvJtKHUw0HlRgxS7l6xw5fPEzzw/mob_living_1010x460.jpg" alt="imaginea 4" style="width:100%;">
-                            </div>
-                            </div>
-
-                            <!-- Left and right controls -->
-                            <a class="left carousel-control" href="#myCarouse2" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left"></span>
-                            <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="right carousel-control" href="#myCarouse2" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right"></span>
-                            <span class="sr-only">Next</span>
-                            </a>
-                        </div>
-                        <!--<h2>Cel mai mare si mai diversificat magazin de mobila din Sebes</h2>
-                        <p>de peste 10 ani in activitati de comert en-gros si en-detail de mobila.</p>
-                        <p>Expozitia noastra de mobila se desfasoara pe:</p>
-                        <ul>
-                            <li>1.500 m<sup>2</sup> - spatiu de expunere</li>
-                            <li>1.500 m<sup>2</sup> - spatiu de depozitare</li>
-                        </ul>-->
-                        <h3>Produse diverse de mobilier si amenajari interioare</h3>
-                        <p>Mobilier de sufragerie, dormitor, mobila tineret, dulapuri, canapele, fotolii, paturi, saltele, bobilier de baie, usi de interior, candelabre, electrocasnice mici, porti de garaj, mobilier de gradina, termopane si multe altele.</p>
-
-                </div> <!-- /.col-lg-9 -->
-                <div class="col-lg-3">
-                    <br>
+                <div class="col-lg-5">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
                             <div class="row">
-                                <div class="col-xs-3">
-                                    <i class="fa fa-comments fa-5x"></i>
+                                <div class="col-xs-2">
+                                    <i class="fa fa-fw fa-check fa-2x"></i>
                                 </div>
-                                <div class="col-xs-9 text-right">
-                                    <div class="huge">OFERTE</div>
-                                    <div>Speciale!</div>
+                                <div class="col-xs-10 text-left">
+                                    <div class="huge">Clinica Denta Bran</div>
+                                    <div>Traditie si experienta</div>
                                 </div>
                             </div>
                         </div>
+                        <div class="panel-body">
+                            <p>Traditie si experienta: personal medical cu înaltă calificare.<br>
+                                Laborator propriu de tehnica dentara.<br>
+                                Folosim numai materiale certificate CE</p>
+                        </div>
                         <a href="oferte-speciale.html">
                             <div class="panel-footer">
-                                <span class="pull-left">Vezi acum</span>
+                                <span class="pull-left">mai multe aici...</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                 <div class="clearfix"></div>
                             </div>
                         </a>
                     </div> <!-- / end panel -->
-                   <div class="panel panel-warning">
+                    <div class="panel panel-primary">
                         <div class="panel-heading">
                             <div class="row">
-                                <div class="col-xs-3">
-                                    <i class="fa fa-comments fa-5x"></i>
+                                <div class="col-xs-2">
+                                    <i class="fa fa-fw fa-check fa-2x"></i>
                                 </div>
-                                <div class="col-xs-9 text-right">
-                                    <div class="huge">discount 5%</div>
-                                    <div><p class="lead">la cumparaturi<br>
-                                        mai mari de 10.000 RON</p>
-                                    </div>
+                                <div class="col-xs-10 text-left">
+                                    <div class="huge">Clinica Denta Bran</div>
+                                    <div>Traditie si experienta</div>
                                 </div>
                             </div>
                         </div>
+                        <div class="panel-body">
+                            <p>Traditie si experienta: personal medical cu înaltă calificare.<br>
+                                Laborator propriu de tehnica dentara.<br>
+                                Folosim numai materiale certificate CE</p>
+                        </div>
+                        <a href="oferte-speciale.html">
+                            <div class="panel-footer">
+                                <span class="pull-left">mai multe aici...</span>
+                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                <div class="clearfix"></div>
+                            </div>
+                        </a>
                     </div> <!-- / end panel -->
-                               
-                    <h2>Parteneri</h2>
-                    <p>Partenerii nostrii sunt... cateva cuvinte despre colaborarea cu ei...</p>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <a href="#">
-                                <img src="../dist/img/logo/ciatti_logo.png" class="img-responsive img-centered" alt="logo">
-                            </a>
+                </div> <!-- /.col-lg- -->
+                <div class="col-lg-7">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-2">
+                                    <i class="fa fa-fw fa-check fa-2x"></i>
+                                </div>
+                                <div class="col-xs-10 text-left">
+                                    <div class="huge">Dotare cu aparatură medicală modernă</div>
+                                    <div>Proiecte</div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-md-12">
-                            <a href="#">
-                                <img src="../dist/img/logo/constar-logo.jpg" class="img-responsive img-centered" alt="logo">
-                            </a>
+                        <div class="panel-body">
+                            <p>S.C. DENTA-BRAN S.R.L. din Alba-Iulia a derulat în perioada august 2012 – mai 2013 proiectul
+                                "Dotarea cu aparate performante a S.C. DENTA-BRAN S.R.L. în vederea dezvoltării activității 
+                                și creșterii competitivității"</p>
+                            <p>S.C. DENTA-BRAN S.R.L. din Alba-Iulia a derulat în perioada august 2012 – mai 2013 proiectul
+                                "Retehnologizarea S.C. DENTA-BRAN S.R.L. în vederea dezvoltării activității de tehnică dentară
+                                și creșterii competitivității"</p>
                         </div>
- 
-                    </div> <!-- / end row -->
+                        <a href="oferte-speciale.html">
+                            <div class="panel-footer">
+                                <span class="pull-left">mai multe aici...</span>
+                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>
+                                </span>
+                                <div class="clearfix"></div>
+                            </div>
+                        </a>
+                    </div> <!-- / end panel -->              
                 </div> <!-- /.col-lg- -->
             </div> <!-- /.row  -->
-            
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-2">
+                                    <i class="fa fa-fw fa-check fa-2x"></i>
+                                </div>
+                                <div class="col-xs-10 text-left">
+                                    <div class="huge">Echipa Medicala</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel-body">
+                            <ul>
+                                <li>dr. Bran Dorin</li>
+                                <li>dr. Bran Simion</li>
+                                <li>dr. Bran Ioan</li>
+                            </ul>
+                        </div>
+                        <a href="oferte-speciale.html">
+                            <div class="panel-footer">
+                                <span class="pull-left">mai multe aici...</span>
+                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                <div class="clearfix"></div>
+                            </div>
+                        </a>
+                    </div> <!-- / end panel -->
+                </div> <!-- /.col-lg- -->
+                <div class="col-lg-7">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-2">
+                                    <i class="fa fa-fw fa-check fa-2x"></i>
+                                </div>
+                                <div class="col-xs-10 text-left">
+                                    <div class="huge">Lista servicii / preturi</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel-body">
+                             <ul>
+                                <li>Implantologie</li>
+                                <li>Chirurgie oro-maxilo-faciala (BMF)</li>
+                                <li>Protetica</li>
+                                <li>Stomatologie estetica</li>
+                                <li>Ortodontie</li>
+                                <li>Si alte servicii dentare</li>
+                            </ul>
+                            <p>Preturi cu 70% mai mici decat in UE sau SUA</p>
+                        </div>
+                        <a href="oferte-speciale.html">
+                            <div class="panel-footer">
+                                <span class="pull-left">mai multe aici...</span>
+                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                <div class="clearfix"></div>
+                            </div>
+                        </a>
+                    </div> <!-- / end panel -->                             
+                </div> <!-- /.col-lg- -->
+            </div> <!-- /.row  -->            
 
         </div>
         <!-- / end page wrapper -->
