--- a/pages/_foot.html
+++ b/pages/_foot.html
@@ -3,7 +3,7 @@
             <div class="container" style="margin-top: 30px;">
                 <ul class="navbar-right list-inline">
                     <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li> 
-                    <li><a href="despre-noi.html"><i class="fa fa-users"></i> Despre noi</a></li>     
+                    <li><a href="despre-noi.html"><i class="fa fa-users"></i> Servicii</a></li>     
                     <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
                 <li><a href="https://www.facebook.com/MobilaLutsch/" target="_blank"><i class="fa fa-facebook-official"></i> Facebook </a></li>    
                 </ul>
@@ -18,11 +18,6 @@
 
     <!-- Metis Menu Plugin JavaScript -->
     <script src="../vendor/metisMenu/metisMenu.min.js"></script>
-
-    <!-- Morris Charts JavaScript -->
-    <script src="../vendor/raphael/raphael.min.js"></script>
-    <script src="../vendor/morrisjs/morris.min.js"></script>
-    <script src="../data/morris-data.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="../dist/js/sb-admin-2.js"></script>
