--- a/pages/oferte-speciale.html
+++ b/pages/oferte-speciale.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Mobila LUTSCH - magazin de mobila Sebes - Alba</title>
+    <title>Denta Bran - implantologie, protetica, stomatologie, chirurgie oro-maxilo-faciala</title>
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- MetisMenu CSS -->
