--- a/pages/index.html
+++ b/pages/index.html
@@ -73,31 +73,6 @@
                             </div>
                         </a>
                     </div> <!-- / end panel -->
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <div class="row">
-                                <div class="col-xs-2">
-                                    <i class="fa fa-fw fa-check fa-2x"></i>
-                                </div>
-                                <div class="col-xs-10 text-left">
-                                    <div class="huge">Clinica Denta Bran</div>
-                                    <div>Traditie si experienta</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel-body">
-                            <p>Traditie si experienta: personal medical cu înaltă calificare.<br>
-                                Laborator propriu de tehnica dentara.<br>
-                                Folosim numai materiale certificate CE</p>
-                        </div>
-                        <a href="oferte-speciale.html">
-                            <div class="panel-footer">
-                                <span class="pull-left">mai multe aici...</span>
-                                <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                                <div class="clearfix"></div>
-                            </div>
-                        </a>
-                    </div> <!-- / end panel -->
                 </div> <!-- /.col-lg- -->
                 <div class="col-lg-7">
                     <div class="panel panel-primary">
@@ -145,11 +120,18 @@
                             </div>
                         </div>
                         <div class="panel-body">
-                            <ul>
-                                <li>dr. Bran Dorin</li>
-                                <li>dr. Bran Simion</li>
-                                <li>dr. Bran Ioan</li>
-                            </ul>
+                            <div class="col-xs-6">
+                                <ul>
+                                    <li>dr. Bran Dorin</li>
+                                    <li>dr. Bran Simion</li>
+                                    <li>dr. Bran Ioan</li>
+                                </ul>
+                            </div>
+                            <div class="col-xs-6">
+                                <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                                    <img src="../dist/img/bran/diploma_s.jpg" class="img-responsive" alt="Diploma Denta Bran">
+                                </a>
+                            </div>
                         </div>
                         <a href="oferte-speciale.html">
                             <div class="panel-footer">
@@ -196,6 +178,30 @@
 
         </div>
         <!-- / end page wrapper -->
+
+    <!-- Modal 1 -->
+    <div class="modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal text-right" data-dismiss="modal">
+                    <i class="fa fa-times"></i>
+                </div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <img class="img-responsive img-centered" src="../dist/img/bran/diploma_l.jpg" alt="Diploma Denta Bran">
+                                <p>o descriere... </p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Inchide fereastra</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 <div id="foot"></div>
 </body>
 </html>
