--- a/pages/servicii.html
+++ b/pages/servicii.html
@@ -80,21 +80,61 @@
                         <h4>Chirurgie orala</h4>
                         <p>Serviciile noastre in Chirurgia BMF (oromaxilofaciala):</p>
                         <ul>
-                            <li>Extractii simple:</li>
-                            <li>Sinus lift</li>
-                            <li>Augmentare osoasa</li>
-                            <li>Aditie osoasa</li>
+                            <li>Extractii simple:
+                                <ul>
+                                    <li>extractie dinti monoradiculari</li>
+                                    <li>extractie dinti pluriradiculari</li>
+                                    <li>extractie dinti temporari (de lapte)</li>
+                                    <li>eruptia molarilor de minte (molarul 3)</li>
+                                </ul>
+                            </li>
+                            <li>Terapia dintilor parodontotici mobili</li>
+                            <li>Alveoloplastie</li>
+                            <li>Osteoplastia procesului alveolar</li>
+                            <li>Premolarizare</li>
+                            <li>Odontectomie</li>
+                            <li>Rezectie apicala dinti anteriori sau premolari</li>
+                            <li>Chistectomie</li>
+                            <li>Rezectie apicala molari</li>
+                            <li>Extirpare tumorete si epulide</li>
+                            <li>Incizie si drenaj abces dentar:
+                                <ul>
+                                    <li>vestibular</li>
+                                    <li>submandibular endobucal</li>
+                                    <li>adenita superficiala</li>
+                                </ul>
+                            </li>
+                            <li>Gingivectomie cu gingivoplastie</li>
+                            <li>Tratament anti-inflamator</li>
+                            <li>Pericoronarita - tratament medicamentos</li>
+                            <li>Pericoronarita - terapia chirurgicala</li>
                         </ul>
                     </div>
                     <div class="tab-pane fade" id="service-3">
                         <h4>Protetica dentara</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae repudiandae fugiat illo cupiditate excepturi esse officiis consectetur, laudantium qui voluptatem. Ad necessitatibus velit, accusantium expedita debitis impedit rerum totam id. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quibusdam recusandae illum, nesciunt, architecto, saepe facere, voluptas eum incidunt dolores magni itaque autem neque velit in. At quia quaerat asperiores.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae repudiandae fugiat illo cupiditate excepturi esse officiis consectetur, laudantium qui voluptatem. Ad necessitatibus velit, accusantium expedita debitis impedit rerum totam id. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quibusdam recusandae illum, nesciunt, architecto, saepe facere, voluptas eum incidunt dolores magni itaque autem neque velit in. At quia quaerat asperiores.</p>
+                        <p>Serviciile noastre in protetica dentara:</p>
+                        <ul>
+                            <li>restaurarea arcadelor dento-alveolare</li>
+                            <li>coroană acrilică provizorie</li>
+                            <li>Crown-root device removal</li>
+                            <li>Full metallic crown</li>
+                            <li>Metallo-composite crown - Semiesthetic</li>
+                            <li>Metallo-porcelain crown - Totally esthetic</li>
+                            <li>Implants based prosthetics</li>
+                            <li>Assessment gyps casts models</li>
+                            <li>Ceramic crown High Esthetics</li>
+                            <li>Veneer High Esthetics</li>
+                            <li>Composite veneers office-made</li>
+                        </ul>
                     </div>
                     <div class="tab-pane fade" id="service-4">
                         <h4>Stomatologie estetica</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae repudiandae fugiat illo cupiditate excepturi esse officiis consectetur, laudantium qui voluptatem. Ad necessitatibus velit, accusantium expedita debitis impedit rerum totam id. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quibusdam recusandae illum, nesciunt, architecto, saepe facere, voluptas eum incidunt dolores magni itaque autem neque velit in. At quia quaerat asperiores.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae repudiandae fugiat illo cupiditate excepturi esse officiis consectetur, laudantium qui voluptatem. Ad necessitatibus velit, accusantium expedita debitis impedit rerum totam id. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quibusdam recusandae illum, nesciunt, architecto, saepe facere, voluptas eum incidunt dolores magni itaque autem neque velit in. At quia quaerat asperiores.</p>
+                        <p>Serviciile noastre in stomatologie estetica:</p>
+                        <ul>
+                            <li>Ceramic crown High Esthetics</li>
+                            <li>Veneer High Esthetics</li>
+                            <li>Dental skyce application</li>
+                        </ul>
                     </div>
                     <div class="tab-pane fade" id="service-5">
                         <h4>Ortodontie</h4>
