--- a/pages/_head.html
+++ b/pages/_head.html
@@ -39,9 +39,9 @@
 
                         <li><a href="index.html">Home</a></li>                       
                         <li><a href="servicii.html">Servicii</a></li>
-                        <li><a href="mobila-tineret.html">Echipa medicala</a></li>
-                        <li><a href="coltare-lutsch.html">Proiecte finantate</a></li>
-                        <li><a href="contact.php?mes=Formular de Contact&alert=info">Contact</a></li>
+                        <!--<li><a href="mobila-tineret.html">Echipa medicala</a></li>-->
+                        <li><a href="proiecte.html">Proiecte finantate</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
