--- a/pages/_foot.html
+++ b/pages/_foot.html
@@ -3,9 +3,9 @@
             <div class="container" style="margin-top: 30px;">
                 <ul class="navbar-right list-inline">
                     <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li> 
-                    <li><a href="despre-noi.html"><i class="fa fa-users"></i> Servicii</a></li>     
+                    <li><a href="servicii.html"><i class="fa fa-users"></i> Servicii</a></li>     
                     <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
-                <li><a href="https://www.facebook.com/MobilaLutsch/" target="_blank"><i class="fa fa-facebook-official"></i> Facebook </a></li>    
+                <li><a href="https://www.facebook.com/pages/Cabinet-denta-bran-alba-iulia/228061867326488" target="_blank"><i class="fa fa-facebook-official"></i> Facebook </a></li>    
                 </ul>
             </div>
         </footer>
