--- a/pages/index.html
+++ b/pages/index.html
@@ -63,9 +63,11 @@
                         <div class="panel-body">
                             <p>Traditie si experienta: personal medical cu înaltă calificare.<br>
                                 Laborator propriu de tehnica dentara.<br>
+                                Sala de operatie<br>
+                                Salon de anestezie<br>
                                 Folosim numai materiale certificate CE</p>
                         </div>
-                        <a href="oferte-speciale.html">
+                        <a href="servicii.html">
                             <div class="panel-footer">
                                 <span class="pull-left">mai multe aici...</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -128,12 +130,16 @@
                                 </ul>
                             </div>
                             <div class="col-xs-6">
-                                <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                                    <img src="../dist/img/bran/diploma_s.jpg" class="img-responsive" alt="Diploma Denta Bran">
-                                </a>
+                                <p>Personal cu înaltă calificare:</p>
+                                <ul>
+                                    <li>1 chirurg BMF</li>
+                                    <li>3 stomatologi</li>
+                                    <li>asistenti de stomatologie</li>
+                                    <li>tehnicieni dentari</li>
+                                </ul>
                             </div>
                         </div>
-                        <a href="oferte-speciale.html">
+                        <a href="servicii.html">
                             <div class="panel-footer">
                                 <span class="pull-left">mai multe aici...</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -155,17 +161,26 @@
                             </div>
                         </div>
                         <div class="panel-body">
-                             <ul>
-                                <li>Implantologie</li>
-                                <li>Chirurgie oro-maxilo-faciala (BMF)</li>
-                                <li>Protetica</li>
-                                <li>Stomatologie estetica</li>
-                                <li>Ortodontie</li>
-                                <li>Si alte servicii dentare</li>
-                            </ul>
-                            <p>Preturi cu 70% mai mici decat in UE sau SUA</p>
+                            <div class="row">
+                                <div class="col-lg-8">
+                                    <ul>
+                                        <li>Implantologie</li>
+                                        <li>Chirurgie oro-maxilo-faciala (BMF)</li>
+                                        <li>Protetica</li>
+                                        <li>Stomatologie estetica</li>
+                                        <li>Ortodontie</li>
+                                        <li>Si alte servicii dentare</li>
+                                    </ul>
+                                    <p>Preturi cu 70% mai mici decat in UE sau SUA</p>
+                                </div>
+                                <div class="col-lg-4">
+                                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                                        <img src="../dist/img/bran/diploma_s.jpg" class="img-responsive" alt="Diploma Denta Bran">
+                                    </a>
+                                </div>
+                            </div>
                         </div>
-                        <a href="oferte-speciale.html">
+                        <a href="servicii.html">
                             <div class="panel-footer">
                                 <span class="pull-left">mai multe aici...</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -175,6 +190,7 @@
                     </div> <!-- / end panel -->                             
                 </div> <!-- /.col-lg- -->
             </div> <!-- /.row  -->            
+
 
         </div>
         <!-- / end page wrapper -->
