--- a/pages/proiecte.html
+++ b/pages/proiecte.html
@@ -37,7 +37,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Saltele ortopedice si saltele superortopedice</h1>
+            <h1 class="page-header">Proiecte</h1>
         </div> <!-- /.col-lg-12 -->
     </div> <!-- /.row -->
     <div class="row">
