--- a/pages/_head.html
+++ b/pages/_head.html
@@ -39,7 +39,7 @@
 
                         <li><a href="index.html">Home</a></li>                       
                         <li><a href="servicii.html">Servicii</a></li>
-                        <!--<li><a href="mobila-tineret.html">Echipa medicala</a></li>-->
+                        <li><a href="galerie-foto.html">Galerie foto</a></li>
                         <li><a href="proiecte.html">Proiecte finantate</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
