--- a/pages/proiecte.html
+++ b/pages/proiecte.html
@@ -40,131 +40,13 @@
             <h1 class="page-header">Proiecte</h1>
         </div> <!-- /.col-lg-12 -->
     </div> <!-- /.row -->
-    <div class="row">
-        <div class="col-md-8">
-            <div class="thumbnail">
-                <img class="img-responsive" src="../dist/img/saltele/Saltea-memory-foam.jpg" alt="Saltele Memory" style="width:100%" >
-                <div class="caption">
-                    <p>Saltele Memory</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="thumbnail">                
-                <img class="img-responsive" src="../dist/img/saltele/Saltea-memory-detaliu.jpg" alt="Saltele" style="width:100%" >
-                    <div class="caption">
-                       <p>Saltele Memory - detaliu</p>
-                    </div>
-            </div>
-        </div>
+    <div class="intrinsic-container intrinsic-container-4x3">
+        <iframe src="../dist/proiecte/index.html" allowfullscreen></iframe> 
     </div>  <!-- / end row -->
-     <div class="row">
-        <div class="col-md-8">
-            <div class="thumbnail">
-                <img class="img-responsive" src="../dist/img/saltele/Saltea-POKET-SPRING.jpg" alt="Saltele POKET-SPRING" style="width:100%" >
-                <div class="caption">
-                    <p>Saltele POKET-SPRING</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="thumbnail">                
-                <img class="img-responsive" src="../dist/img/saltele/POCKETSPRING_detaliu.jpg" alt="Saltele POKET-SPRING" style="width:100%" >
-                    <div class="caption">
-                       <p>Saltele POKET-SPRING - detaliu</p>
-                    </div>
-            </div>
-        </div>
-    </div>  <!-- / end row -->
-     <div class="row">
-        <div class="col-md-8">
-            <div class="thumbnail">
-                <img class="img-responsive" src="../dist/img/saltele/Saltea-ortopedica.jpg" alt="Saltele superortopedice" style="width:100%" >
-                <div class="caption">
-                    <p>Saltele superortopedice</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="thumbnail">                
-                <img class="img-responsive" src="../dist/img/saltele/Saltea-ortopedica_sectiune.jpg" alt="Saltele superortopedice" style="width:100%" >
-                    <div class="caption">
-                       <p>Saltele superortopedice - detaliu</p>
-                    </div>
-            </div>
-        </div>
-    </div>  <!-- / end row -->
-     <div class="row">
-        <div class="col-md-8">
-            <div class="thumbnail">
-                <img class="img-responsive" src="../dist/img/saltele/Saltea-SUPERORTOPEDICA_lux.jpg" alt="Saltele ortopedice LUX" style="width:100%" >
-                <div class="caption">
-                    <p>Saltele Superortopedice LUX</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="thumbnail">                
-                <img class="img-responsive" src="../dist/img/saltele/Saltea-superortopedica_lux_detaliu.jpg" alt="Saltele Ortopedice LUX" style="width:100%" >
-                    <div class="caption">
-                       <p>Saltele Superortopedice LUX - detaliu</p>
-                    </div>
-            </div>
-        </div>
-    </div>  <!-- / end row -->
-    <div class="row">
-        <h4>Dimensiuni (cm):</h4>
-        <div class="col-md-12 table-responsive">          
-        <table class="table table-bordered table-striped text-center">
-            <tbody>
-            <tr>
-                <td>60 x 120</td>
-                <td>80 x 190</td>
-                <td>100 x 190</td>
-                <td>125 x 190</td>
-                <td>135 x 190</td>
-                <td>160 x 190</td>
-            </tr>
-            <tr>
-                <td>70 x 130</td>
-                <td>80 x 200</td>
-                <td>100 x 200</td>
-                <td>125 x 200</td>
-                <td>135 x 200</td>
-                <td>160 x 200</td>
-            </tr>
-            <tr>
-                <td>70 x 190</td>
-                <td>90 x 190</td>
-                <td>120 x 190</td>
-                <td>130 x 190</td>
-                <td>140 x 190</td>
-                <td>180 x 190</td>
-            </tr>
-            <tr>
-                <td>70 x 200</td>
-                <td>90 x 200</td>
-                <td>120 x 200</td>
-                <td>130 x 200</td>
-                <td>140 x 200</td>
-                <td>180 x 200</td>
-            </tr>
-            </tbody>
-        </table>
-        </div>
-    </div>
+ 
 </div> <!-- / end page wrapper -->
         
 <div id="foot"></div>
-<!--<script>
-$(document).ready(function() {
-    var imgs = $("#page-wrapper").find("img.img-responsive");
-    var h = $(imgs[0]).height();
-    for(var i = 0; i < imgs.length; i++) {
-        var img = $(imgs[i]);
-        img.height(h);
-    }
-});
-</script>-->
+
 </body>
 </html>
