--- a/pages/_head.html
+++ b/pages/_head.html
@@ -10,15 +10,15 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" rel="home" title="Denta Bran" href="index.html">
-                    <img src="../dist/img/logo/banner-denta-bran.jpg" style="max-width: 200px; margin-top: -5px;">
+                    <img src="../dist/img/logo/LogoDentaBran_200x28.png" style="max-width: 200px; margin-top: -5px;">
                 </a>
             </div>
             <!-- /.navbar-header -->
             <!-- navbar-top-links upper menu right -->
             <ul class="nav navbar-top-links navbar-right">
-                <li><a href="index.html"><img src="../dist/img/logo/lang-rom-36x24.jpg" style="max-width: 36px; margin-top: -5px;"></a></li>
-                <li><a href="despre-noi.html"><img src="../dist/img/logo/lang-eng-36x24.jpg" style="max-width: 36px; margin-top: -5px;"></a></li>
-                <li><a href="despre-noi.html"><img src="../dist/img/logo/lang-ita-36x24.jpg" style="max-width: 36px; margin-top: -5px;"></a></li>                
+                <li><a href="index.html"><img src="../dist/img/logo/flag-ro.png" style="max-width: 36px; margin-top: -5px;"></a></li>
+                <li><a href="despre-noi.html"><img src="../dist/img/logo/flag-gb.png" style="max-width: 36px; margin-top: -5px;"></a></li>
+                <!--<li><a href="despre-noi.html"><img src="../dist/img/logo/lang-ita-36x24.jpg" style="max-width: 36px; margin-top: -5px;"></a></li>                -->
             </ul>
             <!-- /.navbar-top-links -->
 
