--- a/pages/servicii.html
+++ b/pages/servicii.html
@@ -49,7 +49,7 @@
     </div>-->
     <div class="row">       
         <div class="col-lg-12">
-            <h4 >Un text sau mesaj</h4>
+            <!--<h4 >Un text sau mesaj</h4>-->
             <ul id="myTab" class="nav nav-tabs nav-justified">
                 <li class="active"><a href="#service-1" data-toggle="tab">Implantologie</a>
                     </li>
@@ -211,6 +211,33 @@
         </div>
     
     </div> <!-- /.row -->
+    <div class="row">
+        <div class="col-lg-6">
+            <h3>Tarife</h3>
+            <ul class="list-group">
+                <li class="list-group-item">CONSULTATIE <span class="badge">GRATUIT</span></li>
+                <li class="list-group-item">EXTRACTIE <span class="badge">60 LEI</span></li>
+                <li class="list-group-item">PLOMBA COMPOZIT <span class="badge">100 LEI</span></li>
+                <li class="list-group-item">PLOMBA AMALGAM <span class="badge">70 LEI</span></li>
+                <li class="list-group-item">OBTURATIE CANAL <span class="badge">80 LEI</span></li>
+                <li class="list-group-item">PANSAMENT <span class="badge">40 LEI</span></li>
+                <li class="list-group-item">DETARTRAJ <span class="badge">100 LEI</span></li>
+                <li class="list-group-item">ELEMENT CR/CO <span class="badge">150 LEI</span></li>
+                <li class="list-group-item">PROTEZA ACRILICA <span class="badge">600 LEI</span></li>
+                <li class="list-group-item">RADIOGRAFIE RX <span class="badge">20 LEI</span></li>
+                <li class="list-group-item">CAUTERIZARE <span class="badge">40 LEI</span></li>
+                <li class="list-group-item">DCR STIFT <span class="badge">50 LEI</span></li>
+                <li class="list-group-item">REZECTIE APICALA <span class="badge">180 LEI</span></li>
+                <li class="list-group-item">REZECTIE MOLAR <span class="badge">350 LEI</span></li>
+                <li class="list-group-item">OBTURATIE CANALE MOLAR <span class="badge">100 LEI</span></li>
+                <li class="list-group-item">IMPLANTE <span class="badge">350 EUR/BUC</span></li>            
+                <li class="list-group-item">SUPRASTRUCTURA <span class="badge">70 EUR/BUC</span></li>
+                <li class="list-group-item">ELEMENT CERAMICA <span class="badge">100 EUR/BUC</span></li> 
+                <li class="list-group-item">SUPRASTRUCTURA <span class="badge">70 EUR/BUC</span></li>
+                <li class="list-group-item">RX PANORAMICA <span class="badge">50 LEI</span></li>
+            </ul>
+        </div>
+    </div>
 
 
 
