--- a/pages/index.html
+++ b/pages/index.html
@@ -97,7 +97,7 @@
                                 "Retehnologizarea S.C. DENTA-BRAN S.R.L. în vederea dezvoltării activității de tehnică dentară
                                 și creșterii competitivității"</p>
                         </div>
-                        <a href="oferte-speciale.html">
+                        <a href="proiecte.html">
                             <div class="panel-footer">
                                 <span class="pull-left">mai multe aici...</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>
