--- a/pages/_head-en.html
+++ b/pages/_head-en.html
@@ -27,13 +27,24 @@
         <!-- /.navbar-top-links -->
 
         <div class="navbar-default sidebar" role="navigation">
-            
+            <!--<img class="responsive" src="../dist/img/sediu/sediu_1_xs.jpg" alt="Sediu LUTSCH" style="width:100%" />-->
             <div class="sidebar-nav navbar-collapse">
                 <ul class="nav" id="side-menu">
+                    <!--<li class="sidebar-search">
+                            <div class="input-group custom-search-form">
+                                <input type="text" class="form-control" placeholder="Poate dispare de aici...">
+                                <span class="input-group-btn">
+                                <button class="btn btn-default" type="button">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </span>
+                            </div>                            
+                        </li>-->
+
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="servicii.html">Servicii</a></li>
-                    <li><a href="galerie-foto.html">Galerie foto</a></li>
-                    <li><a href="proiecte.html">Proiecte finantate</a></li>
+                    <li><a href="servicii.html">Services</a></li>
+                    <li><a href="galerie-foto.html">Photo Gallery</a></li>
+                    <li><a href="proiecte.html">Funded Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
