--- a/pages/index-en.html
+++ b/pages/index-en.html
@@ -26,8 +26,8 @@
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script>
         $(function() {
-            $("#head").load("_head.html");
-            $("#foot").load("_foot.html");
+            $("#head").load("_head-en.html");
+            $("#foot").load("_foot-en.html");
         });
     </script>
 </head>
@@ -39,11 +39,10 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Clinica stomatologica Denta Bran</h2>
-                <h3>Denta Bran - implantologie, protetica, stomatologie, chirurgie oro-maxilo-faciala</h2>
-                    <p>Va oferim cea mai buna solutie pentru problemele dvs. stomatologice: tratamente dentare de inalta calitate, in timpul unei vacante speciale in Alba Iulia.<br> Clinica stomatologica Denta Bran din Alba Iulia, dotata cu cea mai moderna
-                        aparatura si tehnica stomatologica va ofera servicii stomatologice de cea mai inalta calitate. In paralel cu tratamentul stomatologic puteti petrece cateva zile de vacanta in atmosfera istorica a orasului nostru, cu diverse posibilitati
-                        de relaxare si divertisment.</p>
+                <h2 class="page-header">Denta Bran - Dental Clinic</h2>
+                <h3>Denta Bran - implantology, prosthetics, dentistry, oral-maxillofacial surgery</h2>
+                    <p>We have the best package for your dental issues: high quality dental treatments during a special holiday in Alba Iulia. The Denta Bran dental clinic providing the best dental technique with the most modern dental equipment, offers
+                        dental services of the highest quality. Along with dental treatment you can spend a few days of vacation in the historic city of Alba Iulia, with various relaxation and entertainment opportunities.</p>
             </div>
         </div>
         <div class="row">
@@ -55,17 +54,17 @@
                                 <i class="fa fa-fw fa-check fa-2x"></i>
                             </div>
                             <div class="col-xs-10 text-left">
-                                <div class="huge">Clinica Denta Bran</div>
-                                <div>Traditie si experienta</div>
+                                <div class="huge">Denta Bran - Dental Clinic</div>
+                                <div>Tradition and experience</div>
                             </div>
                         </div>
                     </div>
                     <div class="panel-body">
-                        <p>Traditie si experienta: personal medical cu înaltă calificare.<br> Laborator propriu de tehnica dentara.<br> Sala de operatie<br> Salon de anestezie<br> Folosim numai materiale certificate CE</p>
+                        <p>Tradition and experience: highly qualified medical staff.<br> Owned dental laboratory.<br> Operation Room.<br> Anesthesia Room<br> We use only CE certified materials.</p>
                     </div>
                     <a href="servicii.html">
                         <div class="panel-footer">
-                            <span class="pull-left">mai multe aici...</span>
+                            <span class="pull-left">more...</span>
                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
                         </div>
@@ -82,8 +81,8 @@
                                 <i class="fa fa-fw fa-check fa-2x"></i>
                             </div>
                             <div class="col-xs-10 text-left">
-                                <div class="huge">Dotare cu aparatură medicală modernă</div>
-                                <div>Proiecte</div>
+                                <div class="huge">Modern medical equipment</div>
+                                <div>Projects</div>
                             </div>
                         </div>
                     </div>
@@ -93,7 +92,7 @@
                     </div>
                     <a href="proiecte.html">
                         <div class="panel-footer">
-                            <span class="pull-left">mai multe aici...</span>
+                            <span class="pull-left">more...</span>
                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>
                                 </span>
                             <div class="clearfix"></div>
@@ -114,7 +113,7 @@
                                 <i class="fa fa-fw fa-check fa-2x"></i>
                             </div>
                             <div class="col-xs-10 text-left">
-                                <div class="huge">Echipa Medicala</div>
+                                <div class="huge">The Medical Team</div>
                             </div>
                         </div>
                     </div>
@@ -127,18 +126,18 @@
                             </ul>
                         </div>
                         <div class="col-xs-6">
-                            <p>Personal cu înaltă calificare:</p>
+                            <p>Highly qualified staff:</p>
                             <ul>
-                                <li>1 chirurg BMF</li>
-                                <li>3 stomatologi</li>
-                                <li>asistenti de stomatologie</li>
-                                <li>tehnicieni dentari</li>
+                                <li>1 Oral-Maxillofacial Surgeon</li>
+                                <li>3 Dentists</li>
+                                <li>Dental Assistant</li>
+                                <li>Dental Technicians</li>
                             </ul>
                         </div>
                     </div>
                     <a href="servicii.html">
                         <div class="panel-footer">
-                            <span class="pull-left">mai multe aici...</span>
+                            <span class="pull-left">more...</span>
                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
                         </div>
@@ -155,7 +154,7 @@
                                 <i class="fa fa-fw fa-check fa-2x"></i>
                             </div>
                             <div class="col-xs-10 text-left">
-                                <div class="huge">Lista servicii / preturi</div>
+                                <div class="huge">List of services / prices</div>
                             </div>
                         </div>
                     </div>
@@ -163,14 +162,14 @@
                         <div class="row">
                             <div class="col-lg-8">
                                 <ul>
-                                    <li>Implantologie</li>
-                                    <li>Chirurgie oro-maxilo-faciala (BMF)</li>
-                                    <li>Protetica</li>
-                                    <li>Stomatologie estetica</li>
-                                    <li>Ortodontie</li>
-                                    <li>Si alte servicii dentare</li>
+                                    <li>Implantology</li>
+                                    <li>Oral-Maxillofacial Surgery (BMF)</li>
+                                    <li>Prosthodontics</li>
+                                    <li>Aesthetic dentistry</li>
+                                    <li>Orthodontics</li>
+                                    <li>And other dental services</li>
                                 </ul>
-                                <p>Preturi cu 70% mai mici decat in UE sau SUA</p>
+                                <p>Prices 70% lower than in the EU or the US</p>
                             </div>
                             <div class="col-lg-4">
                                 <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
@@ -181,7 +180,7 @@
                     </div>
                     <a href="servicii.html">
                         <div class="panel-footer">
-                            <span class="pull-left">mai multe aici...</span>
+                            <span class="pull-left">more...</span>
                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
                         </div>
